<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BackgroundStyle"
    tools:context=".auth.presentation.login.LoginFragment">

    <ImageView
        android:id="@+id/icono"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/chefcito_color"
        android:contentDescription="Icono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icon_title"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:background="@drawable/chefcito_logo_white"
        android:contentDescription="Icono logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icono"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        style="@style/MyCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/icon_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".50"
        app:layout_constraintStart_toStartOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_Shields"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_Welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                style="@style/TextColorTitle"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_layout_email"
                style="@style/MyTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_max="488dp"
                app:layout_constraintTop_toBottomOf="@+id/text_Welcome"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/TextInputEditTextStyle"
                    android:autofillHints="@string/input_email"
                    android:drawableStart="@drawable/baseline_person"
                    android:hint="@string/input_email"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_layout_password"
                style="@style/MyTextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_layout_email"
                app:layout_constraintWidth_max="488dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/TextInputEditTextStyle"
                    android:autofillHints="@string/input_password"
                    android:drawableStart="@drawable/baseline_lock"
                    android:hint="@string/input_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_layout_password"
                app:layout_constraintWidth_max="320dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_instructions"
        style="@style/TextColorLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/prompt_dont_have_account"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/tvSignUp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSignUp"
        style="@style/SignUpTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/signup"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_instructions"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>